// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsPassword addEmail call this.db.addEmail 1`] = `
Array [
  "id",
  "john.doe@gmail.com",
  true,
]
`;

exports[`AccountsPassword changePassword, invalidate all sessions and remove all reset password tokens from user storage call invalidateAllSessions 1`] = `
Array [
  undefined,
]
`;

exports[`AccountsPassword changePassword, invalidate all sessions and remove all reset password tokens from user storage call removeAllResetPasswordTokens 1`] = `
Array [
  undefined,
]
`;

exports[`AccountsPassword findUserByEmail call this.db.findUserByEmail 1`] = `
Array [
  "email",
]
`;

exports[`AccountsPassword findUserByUsername call this.db.findUserByUsername 1`] = `
Array [
  "email",
]
`;

exports[`AccountsPassword removeEmail call this.db.removeEmail 1`] = `
Array [
  "id",
  "email",
]
`;

exports[`AccountsPassword resetPassword reset password and invalidate all sessions 1`] = `
Array [
  "id",
]
`;

exports[`AccountsPassword resetPassword reset password and return tokens 1`] = `
Array [
  "id",
]
`;

exports[`AccountsPassword resetPassword validate user email if enrolled 1`] = `
Array [
  "id",
]
`;

exports[`AccountsPassword verifyEmail call this.db.verifyEmail 1`] = `
Array [
  undefined,
  "john.doe@gmail.com",
]
`;
